AST ORIGINAL/AST/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONTINUE

Grammar

Rule 0     S' -> start
Rule 1     start -> type_declarations
Rule 2     type_declarations -> type_declaration
Rule 3     type_declarations -> type_declarations , type_declaration
Rule 4     type_declaration -> class_declaration
Rule 5     class_declaration -> class_header_name class_body
Rule 6     class_header_name -> modifiers_opt CLASS name
Rule 7     modifiers_opt -> modifiers
Rule 8     modifiers_opt -> empty
Rule 9     modifiers -> modifier
Rule 10    modifiers -> modifiers modifier
Rule 11    class_body -> opening_bracket classbodydecllist closing_bracket
Rule 12    opening_bracket -> {
Rule 13    closing_bracket -> }
Rule 14    tmain -> tmain_header opening_bracket method_body closing_bracket
Rule 15    tmain_header -> tmain_name ( formal_parameter_list_opt )
Rule 16    tmain_name -> modifiers_opt type MAIN
Rule 17    classbodydecllist -> classbodydecl
Rule 18    classbodydecllist -> classbodydecllist classbodydecl
Rule 19    classbodydecl -> method_declaration
Rule 20    classbodydecl -> tmain
Rule 21    classbodydecl -> field_declartaion
Rule 22    field_declartaion -> modifiers_opt type variable_declarators ;
Rule 23    method_declaration -> method_header opening_bracket method_body closing_bracket
Rule 24    method_header -> method_header_name ( formal_parameter_list_opt )
Rule 25    method_header_name -> modifiers_opt type name
Rule 26    method_body -> block_statements
Rule 27    formal_parameter_list_opt -> formal_parameter_list
Rule 28    formal_parameter_list_opt -> empty
Rule 29    formal_parameter -> type variable_declarator_id
Rule 30    variable_declarator_id -> name
Rule 31    formal_parameter_list -> formal_parameter
Rule 32    formal_parameter_list -> formal_parameter_list , formal_parameter
Rule 33    type -> primitive_type
Rule 34    type -> array_type
Rule 35    array_type -> primitive_type dims
Rule 36    array_type -> name dims
Rule 37    dims -> [ ]
Rule 38    dims -> dims [ ]
Rule 39    primitive_type -> BOOLEAN
Rule 40    primitive_type -> VOID
Rule 41    primitive_type -> BYTE
Rule 42    primitive_type -> SHORT
Rule 43    primitive_type -> INT
Rule 44    primitive_type -> LONG
Rule 45    primitive_type -> CHAR
Rule 46    primitive_type -> FLOAT
Rule 47    primitive_type -> DOUBLE
Rule 48    primitive_type -> STRING
Rule 49    modifier -> PUBLIC
Rule 50    modifier -> PROTECTED
Rule 51    modifier -> PRIVATE
Rule 52    modifier -> STATIC
Rule 53    modifier -> ABSTRACT
Rule 54    modifier -> FINAL
Rule 55    modifier -> NATIVE
Rule 56    name -> NAME
Rule 57    empty -> <empty>
Rule 58    block_statements -> block_statement
Rule 59    block_statements -> block_statements block_statement
Rule 60    block_statement -> local_variable_declaration_statement
Rule 61    block_statement -> statement
Rule 62    local_variable_declaration_statement -> local_variable_declaration ;
Rule 63    local_variable_declaration -> type variable_declarators
Rule 64    local_variable_declaration -> modifiers type variable_declarators
Rule 65    variable_declarators -> variable_declarator
Rule 66    variable_declarators -> variable_declarators , variable_declarator
Rule 67    variable_declarator -> variable_declarator_id
Rule 68    variable_declarator -> variable_declarator_id ASSIGN Expr
Rule 69    statement -> other_statement
Rule 70    statement -> if_then_statement
Rule 71    statement -> if_then_else_statement
Rule 72    statement -> while_statement
Rule 73    statement -> do_while_statement
Rule 74    other_statement -> expression_statement
Rule 75    other_statement -> break_statement
Rule 76    other_statement -> return_statement
Rule 77    other_statement -> ;
Rule 78    expression_statement -> statement_expression ;
Rule 79    statement_expression -> assignment
Rule 80    statement_expression -> unary_expression
Rule 81    statement_expression -> method_invocation
Rule 82    method_invocation -> NAME ( argument_list )
Rule 83    method_invocation -> NAME ( )
Rule 84    argument_list -> expression
Rule 85    argument_list -> argument_list , expression
Rule 86    break_statement -> BREAK ;
Rule 87    break_statement -> BREAK NAME ;
Rule 88    return_statement -> RETURN expression_opt ;
Rule 89    expression_opt -> expression
Rule 90    expression_opt -> empty
Rule 91    if_then_statement -> IF ( expression ) opening_bracket block_statements closing_bracket
Rule 92    if_then_else_statement -> IF ( expression ) opening_bracket block_statements closing_bracket else
Rule 93    else -> ELSE opening_bracket block_statements closing_bracket
Rule 94    while_statement -> WHILE ( expression ) opening_bracket block_statements closing_bracket
Rule 95    do_while_statement -> DO opening_bracket block_statements closing_bracket WHILE ( expression ) ;
Rule 96    expression -> assignment_expression
Rule 97    assignment_expression -> assignment
Rule 98    assignment_expression -> Expr
Rule 99    assignment -> Location assignment_operator Expr
Rule 100   Location -> name
Rule 101   Location -> array_access
Rule 102   assignment_operator -> ASSIGN
Rule 103   assignment_operator -> TIMES_ASSIGN
Rule 104   assignment_operator -> DIVIDE_ASSIGN
Rule 105   assignment_operator -> REMAINDER_ASSIGN
Rule 106   assignment_operator -> PLUS_ASSIGN
Rule 107   assignment_operator -> MINUS_ASSIGN
Rule 108   Expr -> exprbinaryexpr
Rule 109   Expr -> unary_expression
Rule 110   Expr -> primary
Rule 111   Expr -> name
Rule 112   exprbinaryexpr -> Expr ADD Expr
Rule 113   exprbinaryexpr -> Expr SUB Expr
Rule 114   exprbinaryexpr -> Expr MUL Expr
Rule 115   exprbinaryexpr -> Expr DIV Expr
Rule 116   exprbinaryexpr -> Expr AND Expr
Rule 117   exprbinaryexpr -> Expr OR Expr
Rule 118   exprbinaryexpr -> Expr LESS Expr
Rule 119   exprbinaryexpr -> Expr LTEQ Expr
Rule 120   exprbinaryexpr -> Expr GREATER Expr
Rule 121   exprbinaryexpr -> Expr GTEQ Expr
Rule 122   exprbinaryexpr -> Expr EQ Expr
Rule 123   exprbinaryexpr -> Expr NEQ Expr
Rule 124   unary_expression -> pre_increment_expression
Rule 125   unary_expression -> pre_decrement_expression
Rule 126   unary_expression -> UMINUS Expr
Rule 127   unary_expression -> post_increment_expression
Rule 128   unary_expression -> post_decrement_expression
Rule 129   pre_increment_expression -> PLUSPLUS Expr
Rule 130   pre_decrement_expression -> MINUSMINUS Expr
Rule 131   post_increment_expression -> Expr PLUSPLUS
Rule 132   post_decrement_expression -> Expr MINUSMINUS
Rule 133   primary -> literal
Rule 134   primary -> array_access
Rule 135   array_access -> name [ Expr ]
Rule 136   literal -> NUM
Rule 137   literal -> CHAR_LITERAL
Rule 138   literal -> STRING_LITERAL
Rule 139   literal -> TRUE
Rule 140   literal -> FALSE
Rule 141   literal -> NULL

Terminals, with rules where they appear

(                    : 15 24 82 83 91 92 94 95
)                    : 15 24 82 83 91 92 94 95
,                    : 3 32 66 85
;                    : 22 62 77 78 86 87 88 95
ABSTRACT             : 53
ADD                  : 112
AND                  : 116
ASSIGN               : 68 102
BOOLEAN              : 39
BREAK                : 86 87
BYTE                 : 41
CHAR                 : 45
CHAR_LITERAL         : 137
CLASS                : 6
CONTINUE             : 
DIV                  : 115
DIVIDE_ASSIGN        : 104
DO                   : 95
DOUBLE               : 47
ELSE                 : 93
EQ                   : 122
FALSE                : 140
FINAL                : 54
FLOAT                : 46
GREATER              : 120
GTEQ                 : 121
IF                   : 91 92
INT                  : 43
LESS                 : 118
LONG                 : 44
LTEQ                 : 119
MAIN                 : 16
MINUSMINUS           : 130 132
MINUS_ASSIGN         : 107
MUL                  : 114
NAME                 : 56 82 83 87
NATIVE               : 55
NEQ                  : 123
NULL                 : 141
NUM                  : 136
OR                   : 117
PLUSPLUS             : 129 131
PLUS_ASSIGN          : 106
PRIVATE              : 51
PROTECTED            : 50
PUBLIC               : 49
REMAINDER_ASSIGN     : 105
RETURN               : 88
SHORT                : 42
STATIC               : 52
STRING               : 48
STRING_LITERAL       : 138
SUB                  : 113
TIMES_ASSIGN         : 103
TRUE                 : 139
UMINUS               : 126
VOID                 : 40
WHILE                : 94 95
[                    : 37 38 135
]                    : 37 38 135
error                : 
{                    : 12
}                    : 13

Nonterminals, with rules where they appear

Expr                 : 68 98 99 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 126 129 130 131 132 135
Location             : 99
argument_list        : 82 85
array_access         : 101 134
array_type           : 34
assignment           : 79 97
assignment_expression : 96
assignment_operator  : 99
block_statement      : 58 59
block_statements     : 26 59 91 92 93 94 95
break_statement      : 75
class_body           : 5
class_declaration    : 4
class_header_name    : 5
classbodydecl        : 17 18
classbodydecllist    : 11 18
closing_bracket      : 11 14 23 91 92 93 94 95
dims                 : 35 36 38
do_while_statement   : 73
else                 : 92
empty                : 8 28 90
exprbinaryexpr       : 108
expression           : 84 85 89 91 92 94 95
expression_opt       : 88
expression_statement : 74
field_declartaion    : 21
formal_parameter     : 31 32
formal_parameter_list : 27 32
formal_parameter_list_opt : 15 24
if_then_else_statement : 71
if_then_statement    : 70
literal              : 133
local_variable_declaration : 62
local_variable_declaration_statement : 60
method_body          : 14 23
method_declaration   : 19
method_header        : 23
method_header_name   : 24
method_invocation    : 81
modifier             : 9 10
modifiers            : 7 10 64
modifiers_opt        : 6 16 22 25
name                 : 6 25 30 36 100 111 135
opening_bracket      : 11 14 23 91 92 93 94 95
other_statement      : 69
post_decrement_expression : 128
post_increment_expression : 127
pre_decrement_expression : 125
pre_increment_expression : 124
primary              : 110
primitive_type       : 33 35
return_statement     : 76
start                : 0
statement            : 61
statement_expression : 78
tmain                : 20
tmain_header         : 14
tmain_name           : 15
type                 : 16 22 25 29 63 64
type_declaration     : 2 3
type_declarations    : 1 3
unary_expression     : 80 109
variable_declarator  : 65 66
variable_declarator_id : 29 67 68
variable_declarators : 22 63 64 66
while_statement      : 72

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . type_declarations
    (2) type_declarations -> . type_declaration
    (3) type_declarations -> . type_declarations , type_declaration
    (4) type_declaration -> . class_declaration
    (5) class_declaration -> . class_header_name class_body
    (6) class_header_name -> . modifiers_opt CLASS name
    (7) modifiers_opt -> . modifiers
    (8) modifiers_opt -> . empty
    (9) modifiers -> . modifier
    (10) modifiers -> . modifiers modifier
    (57) empty -> .
    (49) modifier -> . PUBLIC
    (50) modifier -> . PROTECTED
    (51) modifier -> . PRIVATE
    (52) modifier -> . STATIC
    (53) modifier -> . ABSTRACT
    (54) modifier -> . FINAL
    (55) modifier -> . NATIVE

    CLASS           reduce using rule 57 (empty -> .)
    PUBLIC          shift and go to state 10
    PROTECTED       shift and go to state 11
    PRIVATE         shift and go to state 12
    STATIC          shift and go to state 13
    ABSTRACT        shift and go to state 14
    FINAL           shift and go to state 15
    NATIVE          shift and go to state 16

    start                          shift and go to state 1
    type_declarations              shift and go to state 2
    type_declaration               shift and go to state 3
    class_declaration              shift and go to state 4
    class_header_name              shift and go to state 5
    modifiers_opt                  shift and go to state 6
    modifiers                      shift and go to state 7
    empty                          shift and go to state 8
    modifier                       shift and go to state 9

state 1

    (0) S' -> start .



state 2

    (1) start -> type_declarations .
    (3) type_declarations -> type_declarations . , type_declaration

    $end            reduce using rule 1 (start -> type_declarations .)
    ,               shift and go to state 17


state 3

    (2) type_declarations -> type_declaration .

    ,               reduce using rule 2 (type_declarations -> type_declaration .)
    $end            reduce using rule 2 (type_declarations -> type_declaration .)


state 4

    (4) type_declaration -> class_declaration .

    ,               reduce using rule 4 (type_declaration -> class_declaration .)
    $end            reduce using rule 4 (type_declaration -> class_declaration .)


state 5

    (5) class_declaration -> class_header_name . class_body
    (11) class_body -> . opening_bracket classbodydecllist closing_bracket
    (12) opening_bracket -> . {

    {               shift and go to state 20

    class_body                     shift and go to state 18
    opening_bracket                shift and go to state 19

state 6

    (6) class_header_name -> modifiers_opt . CLASS name

    CLASS           shift and go to state 21


state 7

    (7) modifiers_opt -> modifiers .
    (10) modifiers -> modifiers . modifier
    (49) modifier -> . PUBLIC
    (50) modifier -> . PROTECTED
    (51) modifier -> . PRIVATE
    (52) modifier -> . STATIC
    (53) modifier -> . ABSTRACT
    (54) modifier -> . FINAL
    (55) modifier -> . NATIVE

    CLASS           reduce using rule 7 (modifiers_opt -> modifiers .)
    BOOLEAN         reduce using rule 7 (modifiers_opt -> modifiers .)
    VOID            reduce using rule 7 (modifiers_opt -> modifiers .)
    BYTE            reduce using rule 7 (modifiers_opt -> modifiers .)
    SHORT           reduce using rule 7 (modifiers_opt -> modifiers .)
    INT             reduce using rule 7 (modifiers_opt -> modifiers .)
    LONG            reduce using rule 7 (modifiers_opt -> modifiers .)
    CHAR            reduce using rule 7 (modifiers_opt -> modifiers .)
    FLOAT           reduce using rule 7 (modifiers_opt -> modifiers .)
    DOUBLE          reduce using rule 7 (modifiers_opt -> modifiers .)
    STRING          reduce using rule 7 (modifiers_opt -> modifiers .)
    NAME            reduce using rule 7 (modifiers_opt -> modifiers .)
    PUBLIC          shift and go to state 10
    PROTECTED       shift and go to state 11
    PRIVATE         shift and go to state 12
    STATIC          shift and go to state 13
    ABSTRACT        shift and go to state 14
    FINAL           shift and go to state 15
    NATIVE          shift and go to state 16

    modifier                       shift and go to state 22

state 8

    (8) modifiers_opt -> empty .

    CLASS           reduce using rule 8 (modifiers_opt -> empty .)
    BOOLEAN         reduce using rule 8 (modifiers_opt -> empty .)
    VOID            reduce using rule 8 (modifiers_opt -> empty .)
    BYTE            reduce using rule 8 (modifiers_opt -> empty .)
    SHORT           reduce using rule 8 (modifiers_opt -> empty .)
    INT             reduce using rule 8 (modifiers_opt -> empty .)
    LONG            reduce using rule 8 (modifiers_opt -> empty .)
    CHAR            reduce using rule 8 (modifiers_opt -> empty .)
    FLOAT           reduce using rule 8 (modifiers_opt -> empty .)
    DOUBLE          reduce using rule 8 (modifiers_opt -> empty .)
    STRING          reduce using rule 8 (modifiers_opt -> empty .)
    NAME            reduce using rule 8 (modifiers_opt -> empty .)


state 9

    (9) modifiers -> modifier .

    PUBLIC          reduce using rule 9 (modifiers -> modifier .)
    PROTECTED       reduce using rule 9 (modifiers -> modifier .)
    PRIVATE         reduce using rule 9 (modifiers -> modifier .)
    STATIC          reduce using rule 9 (modifiers -> modifier .)
    ABSTRACT        reduce using rule 9 (modifiers -> modifier .)
    FINAL           reduce using rule 9 (modifiers -> modifier .)
    NATIVE          reduce using rule 9 (modifiers -> modifier .)
    CLASS           reduce using rule 9 (modifiers -> modifier .)
    BOOLEAN         reduce using rule 9 (modifiers -> modifier .)
    VOID            reduce using rule 9 (modifiers -> modifier .)
    BYTE            reduce using rule 9 (modifiers -> modifier .)
    SHORT           reduce using rule 9 (modifiers -> modifier .)
    INT             reduce using rule 9 (modifiers -> modifier .)
    LONG            reduce using rule 9 (modifiers -> modifier .)
    CHAR            reduce using rule 9 (modifiers -> modifier .)
    FLOAT           reduce using rule 9 (modifiers -> modifier .)
    DOUBLE          reduce using rule 9 (modifiers -> modifier .)
    STRING          reduce using rule 9 (modifiers -> modifier .)
    NAME            reduce using rule 9 (modifiers -> modifier .)


state 10

    (49) modifier -> PUBLIC .

    PUBLIC          reduce using rule 49 (modifier -> PUBLIC .)
    PROTECTED       reduce using rule 49 (modifier -> PUBLIC .)
    PRIVATE         reduce using rule 49 (modifier -> PUBLIC .)
    STATIC          reduce using rule 49 (modifier -> PUBLIC .)
    ABSTRACT        reduce using rule 49 (modifier -> PUBLIC .)
    FINAL           reduce using rule 49 (modifier -> PUBLIC .)
    NATIVE          reduce using rule 49 (modifier -> PUBLIC .)
    CLASS           reduce using rule 49 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 49 (modifier -> PUBLIC .)
    VOID            reduce using rule 49 (modifier -> PUBLIC .)
    BYTE            reduce using rule 49 (modifier -> PUBLIC .)
    SHORT           reduce using rule 49 (modifier -> PUBLIC .)
    INT             reduce using rule 49 (modifier -> PUBLIC .)
    LONG            reduce using rule 49 (modifier -> PUBLIC .)
    CHAR            reduce using rule 49 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 49 (modifier -> PUBLIC .)
    DOUBLE          reduce using rule 49 (modifier -> PUBLIC .)
    STRING          reduce using rule 49 (modifier -> PUBLIC .)
    NAME            reduce using rule 49 (modifier -> PUBLIC .)


state 11

    (50) modifier -> PROTECTED .

    PUBLIC          reduce using rule 50 (modifier -> PROTECTED .)
    PROTECTED       reduce using rule 50 (modifier -> PROTECTED .)
    PRIVATE         reduce using rule 50 (modifier -> PROTECTED .)
    STATIC          reduce using rule 50 (modifier -> PROTECTED .)
    ABSTRACT        reduce using rule 50 (modifier -> PROTECTED .)
    FINAL           reduce using rule 50 (modifier -> PROTECTED .)
    NATIVE          reduce using rule 50 (modifier -> PROTECTED .)
    CLASS           reduce using rule 50 (modifier -> PROTECTED .)
    BOOLEAN         reduce using rule 50 (modifier -> PROTECTED .)
    VOID            reduce using rule 50 (modifier -> PROTECTED .)
    BYTE            reduce using rule 50 (modifier -> PROTECTED .)
    SHORT           reduce using rule 50 (modifier -> PROTECTED .)
    INT             reduce using rule 50 (modifier -> PROTECTED .)
    LONG            reduce using rule 50 (modifier -> PROTECTED .)
    CHAR            reduce using rule 50 (modifier -> PROTECTED .)
    FLOAT           reduce using rule 50 (modifier -> PROTECTED .)
    DOUBLE          reduce using rule 50 (modifier -> PROTECTED .)
    STRING          reduce using rule 50 (modifier -> PROTECTED .)
    NAME            reduce using rule 50 (modifier -> PROTECTED .)


state 12

    (51) modifier -> PRIVATE .

    PUBLIC          reduce using rule 51 (modifier -> PRIVATE .)
    PROTECTED       reduce using rule 51 (modifier -> PRIVATE .)
    PRIVATE         reduce using rule 51 (modifier -> PRIVATE .)
    STATIC          reduce using rule 51 (modifier -> PRIVATE .)
    ABSTRACT        reduce using rule 51 (modifier -> PRIVATE .)
    FINAL           reduce using rule 51 (modifier -> PRIVATE .)
    NATIVE          reduce using rule 51 (modifier -> PRIVATE .)
    CLASS           reduce using rule 51 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 51 (modifier -> PRIVATE .)
    VOID            reduce using rule 51 (modifier -> PRIVATE .)
    BYTE            reduce using rule 51 (modifier -> PRIVATE .)
    SHORT           reduce using rule 51 (modifier -> PRIVATE .)
    INT             reduce using rule 51 (modifier -> PRIVATE .)
    LONG            reduce using rule 51 (modifier -> PRIVATE .)
    CHAR            reduce using rule 51 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 51 (modifier -> PRIVATE .)
    DOUBLE          reduce using rule 51 (modifier -> PRIVATE .)
    STRING          reduce using rule 51 (modifier -> PRIVATE .)
    NAME            reduce using rule 51 (modifier -> PRIVATE .)


state 13

    (52) modifier -> STATIC .

    PUBLIC          reduce using rule 52 (modifier -> STATIC .)
    PROTECTED       reduce using rule 52 (modifier -> STATIC .)
    PRIVATE         reduce using rule 52 (modifier -> STATIC .)
    STATIC          reduce using rule 52 (modifier -> STATIC .)
    ABSTRACT        reduce using rule 52 (modifier -> STATIC .)
    FINAL           reduce using rule 52 (modifier -> STATIC .)
    NATIVE          reduce using rule 52 (modifier -> STATIC .)
    CLASS           reduce using rule 52 (modifier -> STATIC .)
    BOOLEAN         reduce using rule 52 (modifier -> STATIC .)
    VOID            reduce using rule 52 (modifier -> STATIC .)
    BYTE            reduce using rule 52 (modifier -> STATIC .)
    SHORT           reduce using rule 52 (modifier -> STATIC .)
    INT             reduce using rule 52 (modifier -> STATIC .)
    LONG            reduce using rule 52 (modifier -> STATIC .)
    CHAR            reduce using rule 52 (modifier -> STATIC .)
    FLOAT           reduce using rule 52 (modifier -> STATIC .)
    DOUBLE          reduce using rule 52 (modifier -> STATIC .)
    STRING          reduce using rule 52 (modifier -> STATIC .)
    NAME            reduce using rule 52 (modifier -> STATIC .)


state 14

    (53) modifier -> ABSTRACT .
